--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,3 @@
-name: Node.js CI/CD Pipeline
-
 on:
   push:
     branches:
@@ -17,14 +15,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
 
       - name: Install dependencies
         run: npm install
 
       - name: Run tests and save results
         run: |
-          npm test > test-results.txt || true
+          npm run check > test-results.txt || true
 
       - name: Upload test results artifact
         uses: actions/upload-artifact@v4
@@ -41,6 +39,23 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Install Node.js 22 system-wide
+        run: |
+          if ! command -v node >/dev/null 2>&1; then
+            curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+          fi
+
+      - name: Install PM2 system-wide
+        run: |
+          if ! command -v pm2 >/dev/null 2>&1; then
+            sudo npm install -g pm2
+          fi
+
+      - name: Configure PM2 startup
+        run: |
+          pm2 startup systemd -u ubuntu --hp /home/ubuntu || true
+
       - name: Download test results artifact
         uses: actions/download-artifact@v4
         with:
@@ -52,9 +67,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Deploy application using PM2
+      - name: Deploy application
         run: |
           pm2 delete node-app || true
-          pm2 start index.js --name node-app
+          pm2 start "./src/server.js" --name node-app
           pm2 save
-
